Swagger doc for login and signup features :  - correct signup HTTP code for added user 201 instead of 204 and update swagger doc - add backend 401 status for unauthorized login and update swagger doc,
