# backend/routes/user.mjs
@@ -10,7 +10,7 @@ const router = express.Router() ;
 // route to create new user : /api/user/signup
 router.post(
   "/signup" , 
-  async (req , res , next) => {
+  async (req , res) => {
     try {
         // Hacher le mot de passe avant de l'enregistrer
         const hashedPassword = await bcrypt.hash(req.body.password, 10);
@@ -21,7 +21,7 @@ router.post(
           password: hashedPassword, 
         }; 
         const result = await UserModel.create(newUser);
-        res.send(result).status(204) ; 
+        res.status(201).json ( { message: "User successfully registered." } ) ; 
     }
     catch (err) { 
       if (err.code === 11000) {  // unicity mongodb code error (mogoose schema "unique" property)
@@ -42,11 +42,13 @@ router.post (
       ); 
 
       if (!user) {
-        return res.status(404).json({ message: 'User not found.' });
+        return res.status(404).json({ message: 'User not registered.' });
       }
 
       const isValid = await bcrypt.compare ( req.body.password , user.password ) ; 
-      if (!isValid) { throw new Error ("Wrong password.") } ; 
+      if (!isValid) { 
+        return res.status(401).json( { message: "Unauthorized : wrong password" } ) ; 
+      } ; 
 
       const token = jwt.sign(
         { email: req.body.email } , 
@@ -54,11 +56,13 @@ router.post (
         { expiresIn: "1h" }
       ); 
 
-      return res.status(200).json({ token });
+      const userId = user._id ; 
+
+      return res.status(200).json({ userId , token });
     }
     catch (err) {
       console.error('Connection error:', err);
-      return res.status(500).json({ message: 'Erreur interne du serveur.' });
+      return res.status(500).json({ message: 'Internal Server error.' });
     }
   }
 )
